--- a/src/assets/styles/components/step-one.scss
+++ b/src/assets/styles/components/step-one.scss
@@ -12,7 +12,7 @@
   }
 
   @media (max-width: $bp-mobile) {
-    gap: $mobile-gap;
+    gap: $gap-lg;
   }
 }
 
